verified errors and fixed them

--- a/calculadora-app.html
+++ b/calculadora-app.html
@@ -71,16 +71,16 @@
             <label for="chatSupport">Soporte en vivo mediante chat</label>
             <input type="checkbox" id="chatSupport" value="3000|Live chat">
 
-            <label for="multilingual">Jugabilidad</label>
+            <label for="jugabilidad">Jugabilidad</label>
             <input type="checkbox" id="jugabilidad" value="4000|Gaming">
 
             <label>Diseño y funcionalidades personalizadas:</label>
-            <input type="checkbox" id="customDesign" />
+            <input type="checkbox" id="customDesign" >
 
             <p>¿Necesitas ayuda para crear el contenido (textos, imágenes, videos) para tu página web?</p>
 
             <label>Entrega urgente:</label>
-            <input type="checkbox" id="urgent" />
+            <input type="checkbox" id="urgent" >
 
             <p>¿Necesitas que el proyecto sea entregado en menos de 3 meses?</p>
 
