--- a/calendar.html
+++ b/calendar.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5530498496547836"
@@ -46,7 +46,7 @@
     </header>
         <div class="content">
             <!-- Google Calendar Appointment Scheduling begin -->
-            <iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ19o0N_IMBYaP3erXag4o7MP32J3Cwl_HHRtWd4vNTv2e3FPHg-5MnV6HVOKgIO73qAL1cpNaF3?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
+            <iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ19o0N_IMBYaP3erXag4o7MP32J3Cwl_HHRtWd4vNTv2e3FPHg-5MnV6HVOKgIO73qAL1cpNaF3?gv=true" style="border: 0; width: 100%;" height="600"></iframe>
             <!-- end Google Calendar Appointment Scheduling -->
         </div>    
     <!-- Footer -->
