--- a/contact.html
+++ b/contact.html
@@ -68,21 +68,21 @@
             <div class="side-menu">
                 <div class="side-container">
                     <div class="calc">
-                        <img src="images/images/icons/icons8-web-100.png">
+                        <img src="images/images/icons/icons8-web-100.png" alt="icon">
                         <h1>Calcula el Costo de <br>tu Página Web</h1>
                         <p>Obtén un precio estimado de tu Website</p>
                         <br>
                         <a class="calcular" href="calculadora-web.html">Calcular</a>
                     </div>
                     <div class="calc">
-                        <img src="images/images/icons/icons8-dos-smartphones-100.png">
+                        <img src="images/images/icons/icons8-dos-smartphones-100.png" alt="icon">
                         <h1>Calcula el Costo de tu App Movil</h1>
                         <p>Obtén un precio estimado de tu App</p>
                         <br>
                         <a class="calcular" href="calculadora-app.html">Calcular</a>
                     </div>
                     <div class="calc">
-                        <img src="images/images/icons/icons8-hora-de-la-cita-100.png">
+                        <img src="images/images/icons/icons8-hora-de-la-cita-100.png" alt="icon">
                         <h1>Agenda una cita</h1>
                         <p>Aterrizemos tu idea en 30 minutos</p>
                         <br>
