--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
           Tu navegador no soporta el tag de video.
         </video>
       <div id="container">
-      <span><h1>Desarrollamos tu App Movil</h1><p>Llevamos tu página web al siguiente nivel con tu propia App</p>
-      </span>
+      <div>
+        <h1>Desarrollamos tu App Movil</h1><p>Llevamos tu página web al siguiente nivel con tu propia App</p>
+      </div>
       <div class="bottom">
           <a class="button1" href="contact.html">Quiero mi App</a>
       </div>
@@ -67,7 +68,7 @@
           <p>Impulsa tus ventas en línea con apps personalizadas que optimizan la experiencia de compra y aumentan tu alcance.</p>
       </div>
       <div class="feature-item">
-          <img class="icon" src="https://img.icons8.com/material-outlined/100/online-order.png" alt="online-order"/>
+          <img class="icon" src="https://img.icons8.com/material-outlined/100/online-order.png" alt="online-order">
           <h3>Apps para negocios digitales</h3>
           <p>Transforma tu idea en una realidad digital. Desarrollamos apps a medida que potencian tu marca y te conectan con tu audiencia.</p>
       </div>
@@ -80,13 +81,13 @@
 
   <!-- Hero2 section -->
   <section class="hero2" id="home2">
-          <span>
+          <div>
               <h1>Desarrollamos tu Sitio Web</h1>
               <p>B2B & B2C ¡Tú lo sueñas, nosotros lo hacemos realidad!</p>
               <div class="bottom">
                   <a class="button1" href="contact.html">Quiero mi Sitio Web</a>
               </div>
-          </span>
+            </div>
           <div id="contain">
               <img id="computer" src="/images/images/computer.png" alt="Computer Services">
               <img class="services" src="/images/images/alimentos.webp" alt="Food Services">
