--- a/services.html
+++ b/services.html
@@ -52,10 +52,10 @@
         <p>Custom solutions for websites, marketplaces, apps, and more.</p>
         <div class="cta-buttons">
             <a href="contact.html">
-                <button>Cotizar Ahora</button>
+                <div class="button">Cotizar Ahora</div>
             </a>
             <a href="portfolio.html">
-                <button>Ver Portafolio</button>
+                <div class="button">Ver Portafolio</div>
             </a>
         </div>
     </section>
@@ -89,7 +89,7 @@
         </div>
         <br>
         <a href="portfolio.html">
-            <button>Ver más</button>
+            <div class="button">Ver más</div>
         </a>
     </section>
 
@@ -122,7 +122,7 @@
         </div>
         <br>
         <a href="portfolio.html">
-            <button>Ver más</button>
+            <div class="button">Ver más</div>
         </a>
     </section>
 
@@ -166,7 +166,7 @@
         <p>Demos vida a tus ideas</p>
         <div class="cta-buttons">
             <a href="contact.html">
-                <button>Cotizar</button>
+                <div class="button">Cotizar</div>
                 </a>
         </div>
     </section>
